--- a/src/design/settings/colors.scss
+++ b/src/design/settings/colors.scss
@@ -1,7 +1,9 @@
-$white-color: #FFFFFF;
 $black-color: #000000;
+$lightBlack-color: #323232;
+$darkGrey-color: #232323;
+$darkGrey-transparent: rgba(35, 35, 35, 0.92);
+$grey-color: #424242;
+$light-grey-color: #555555;
 $red-color: #F65261;
 $ultra-light-grey-color: #979797;
-$light-grey-color: #555555;
-$grey-color: #424242;
-$darkGrey-color: #232323;
+$white-color: #FFFFFF;
