--- a/src/ui-kit/molecules/MovieElement/MovieElement.scss
+++ b/src/ui-kit/molecules/MovieElement/MovieElement.scss
@@ -1,10 +1,20 @@
 @import "common.scss";
 
 .movieElement{
+    position: relative;
+    &__image{
+        width: 100%;
+    }
     &__info{
         box-sizing: border-box;
         display: flex;
         justify-content: space-between;
         padding: 15px 0;
+    }
+}
+
+.movieElement:hover{
+    .deleteEdit{
+        display: block;
     }
 }
