--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 @import "fonts/index.scss";
 
 body {
-  background: var(--c-darkGrey);
+  background: var(--c-ligthGrey);
   color: var(--c-white);
   font-family: $montserrat;
   margin: 0;
