Solving PR coments

--- a/src/ui-kit/molecules/MovieDetail/MovieDetail.scss
+++ b/src/ui-kit/molecules/MovieDetail/MovieDetail.scss
@@ -51,7 +51,7 @@
         &__time{
             color: var(--c-red);
             opacity: 100%;
-            margin: 30px 0;
+            margin: 30px 40px 30px 0;
         }
         &__description{
             line-height: 28px;
