--- a/src/ui-kit/molecules/MovieElement/MovieElement.scss
+++ b/src/ui-kit/molecules/MovieElement/MovieElement.scss
@@ -11,6 +11,14 @@
         justify-content: space-between;
         padding: 15px 0;
     }
+    &__link{
+        position: absolute;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
 }
 
 .movieElement:hover{
